Run test-coverage profile only with QuickTest and SlowTest